header area almost completed need to fix spacing and fedex logo

--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
     <header>
       <div class="container">
         <div class="logo">
-          <img src="images/logo.png" alt="" />
+          <img src="./assets/images/Doctor tires final 2.png" alt="" />
         </div>
         <div class="center-text">
-          YOUR CONVENIENCE <span>TIRE SHOP</span> SINCE 2012
+          <span id="first">YOUR CONVENIENCE</span>
+          <span id="second">TIRE SHOP</span>
+          <span id="third">SINCE 2012</span>
         </div>
         <div class="fedex-section">
           <div class="fedex-logo">
-            <img src="images/fedex-logo.png" alt="" />
+            <img src="./assets/images/image 5.png" alt="" />
           </div>
           <div class="fedex-text">
             <span>FREE SHIPPING same day* handling</span>
