header styling completed top bar done, with styling and images

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </div>
         <div class="fedex-section">
           <div class="fedex-logo">
-            <img src="./assets/images/image 5.png" alt="" />
+            <img src="./assets/images/fedex-express.png" alt="" />
           </div>
           <div class="fedex-text">
-            <span>FREE SHIPPING same day* handling</span>
+            FREE SHIPPING same day* handling
           </div>
         </div>
       </div>
-
+    </header>
       <!-- Product Section -->
       <main>
         <!-- title -->
@@ -104,6 +104,7 @@
             </p>
           </div>
         </div>
+    </main>
 
         <!-- tiles section -->
         <div class="tiles-container">
@@ -174,6 +175,7 @@
             </div>
           </div>
         </div>
+        
 
         <!-- auction policy -->
         <div class="auction-policy-container">
@@ -275,7 +277,5 @@
             </nav>
           </div>
         </div>
-      </main>
-    </header>
   </body>
 </html>
