main section completed with images styling and js for gallery functionality

--- a/index.html
+++ b/index.html
@@ -34,248 +34,278 @@
           <div class="fedex-logo">
             <img src="./assets/images/fedex-express.png" alt="" />
           </div>
-          <div class="fedex-text">
-            FREE SHIPPING same day* handling
-          </div>
+          <div class="fedex-text">FREE SHIPPING same day* handling</div>
         </div>
       </div>
     </header>
-      <!-- Product Section -->
-      <main>
-        <!-- title -->
-        <div class="product-name-container">
-          <h1>NAME OF THE PRODUCT</h1>
+    <!-- Product Section -->
+    <main>
+      <!-- title -->
+      <div class="product-name-container">
+        <h1>NAME OF THE PRODUCT</h1>
+      </div>
+      <!-- product image section TRY CODE-->
+      <div class="product-image-gallery">
+        <div class="container">
+          <!-- first image will go here -->
+          <img
+            src="./assets/images/Rectangle 13.png"
+            id="expandedImg"
+            style="width: 100%"
+          />
         </div>
-        <!-- product image section -->
-        <div class="product-image-container">
+        <!-- all images starting with the first will go here -->
+        <div class="images-row">
           <div class="product-image">
-            <img src="images/product-image.png" alt="" />
+            <img
+              src="./assets/images/Rectangle 13.png"
+              alt="Snow"
+              style="width: 100%"
+              onclick="myFunction(this);"
+            />
           </div>
           <div class="product-image">
-            <img src="images/product-image.png" alt="" />
+            <img
+              src="./assets/images/Rectangle 12.png"
+              alt="Mountains"
+              style="width: 100%"
+              onclick="myFunction(this);"
+            />
           </div>
           <div class="product-image">
-            <img src="images/product-image.png" alt="" />
+            <img
+              src="./assets/images/Rectangle 13.png"
+              alt="Lights"
+              style="width: 100%"
+              onclick="myFunction(this);"
+            />
+          </div>
+          <div class="product-image">
+            <img
+              src="./assets/images/Rectangle 12.png"
+              alt="Mountains"
+              style="width: 100%"
+              onclick="myFunction(this);"
+            />
           </div>
         </div>
-        <!-- product bullet points section -->
-        <div class="product-bullet-points-container">
-          <div class="bullet-title">SUMMARY</div>
+      </div>
 
-          <div class="product-bullet-points">
-            <ul>
-              <li>
-                <img src="icon" alt="icon" />
-                <span>Some Words.</span>
-              </li>
-              <li>
-                <img src="icon" alt="icon" />
-                <span>Some Words.</span>
-              </li>
-              <li>
-                <img src="icon" alt="icon" />
-                <span>Some Words.</span>
-              </li>
-              <li>
-                <img src="icon" alt="icon" />
-                <span>Some Words.</span>
-              </li>
-            </ul>
-          </div>
-        </div>
+      <!-- product bullet points section -->
+      <div class="product-bullet-points-container">
+        <div class="bullet-title">SUMMARY</div>
 
-        <!-- product description section -->
-        <div class="product-description-container">
-          <div class="product-description">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              euismod, nisi vel consectetur egestas, nisi nisi consectetur
-              tortor, eget tincidunt nisl nisi velit eget nisl.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              euismod, nisi vel consectetur egestas, nisi nisi consectetur
-              tortor, eget tincidunt nisl nisi velit eget nisl.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-              euismod, nisi vel consectetur egestas, nisi nisi consectetur
-              tortor, eget tincidunt nisl nisi velit eget nisl.
-            </p>
-          </div>
+        <div class="product-bullet-points">
+          <ul>
+            <li>
+              <img src="./assets/images/Vector.png" alt="icon" />
+              <span>Some Words.</span>
+            </li>
+            <li>
+              <img src="./assets/images/Vector.png" alt="icon" />
+              <span>Some Words.</span>
+            </li>
+            <li>
+              <img src="./assets/images/Vector.png" alt="icon" />
+              <span>Some Words.</span>
+            </li>
+            <li>
+              <img src="./assets/images/Vector.png" alt="icon" />
+              <span>Some Words.</span>
+            </li>
+          </ul>
         </div>
+      </div>
+
+      <!-- product description section -->
+      <div class="product-description-container">
+        <div class="product-description">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
+            eget tincidunt nisl nisi velit eget nisl.
+          </p>
+        </div>
+      </div>
     </main>
 
-        <!-- tiles section -->
-        <div class="tiles-container">
-          <div class="tiles">
-            <!-- start of tiles -->
-            <div class="tile">
-              <div class="title-section">
-                <div class="tile-icon">
-                  <img src="images/tile-icon.png" alt="" />
-                </div>
-                <div class="tile-title">
-                  <span>Some title Words.</span>
-                </div>
-              </div>
-              <div class="tile-content">
-                <span>Some content Words.</span>
-              </div>
+    <!-- tiles section -->
+    <div class="tiles-container">
+      <div class="tiles">
+        <!-- start of tiles -->
+        <div class="tile">
+          <div class="title-section">
+            <div class="tile-icon">
+              <img src="images/tile-icon.png" alt="" />
             </div>
-
-            <div class="tile">
-              <div class="title-section">
-                <div class="tile-icon">
-                  <img src="images/tile-icon.png" alt="" />
-                </div>
-                <div class="tile-title">
-                  <span>Some title Words.</span>
-                </div>
-              </div>
-              <div class="tile-content">
-                <span>Some content Words.</span>
-              </div>
-            </div>
-
-            <div class="tile">
-              <div class="title-section">
-                <div class="tile-icon">
-                  <img src="images/tile-icon.png" alt="" />
-                </div>
-                <div class="tile-title">
-                  <span>Some title Words.</span>
-                </div>
-              </div>
-              <div class="tile-content">
-                <span>Some content Words.</span>
-              </div>
-            </div>
-
-            <div class="tile">
-              <div class="title-section">
-                <div class="tile-icon">
-                  <img src="images/tile-icon.png" alt="" />
-                </div>
-                <div class="tile-title">
-                  <span>Some title Words.</span>
-                </div>
-              </div>
-            </div>
-
-            <div class="tile">
-              <div class="title-section">
-                <div class="tile-icon">
-                  <img src="images/tile-icon.png" alt="" />
-                </div>
-                <div class="tile-title">
-                  <span>Some title Words.</span>
-                </div>
-              </div>
+            <div class="tile-title">
+              <span>Some title Words.</span>
             </div>
           </div>
+          <div class="tile-content">
+            <span>Some content Words.</span>
+          </div>
         </div>
-        
 
-        <!-- auction policy -->
-        <div class="auction-policy-container">
-          <div class="auction-policy">
-            <div class="auction-policy-title">
-              <span>AUCTION POLICY</span>
+        <div class="tile">
+          <div class="title-section">
+            <div class="tile-icon">
+              <img src="images/tile-icon.png" alt="" />
             </div>
-            <div class="auction-policy-content">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                euismod, nisi vel consectetur egestas, nisi nisi consectetur
-                tortor, eget tincidunt nisl nisi velit eget nisl.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                euismod, nisi vel consectetur egestas, nisi nisi consectetur
-                tortor, eget tincidunt nisl nisi velit eget nisl.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                euismod, nisi vel consectetur egestas, nisi nisi consectetur
-                tortor, eget tincidunt nisl nisi velit eget nisl.
-              </p>
+            <div class="tile-title">
+              <span>Some title Words.</span>
+            </div>
+          </div>
+          <div class="tile-content">
+            <span>Some content Words.</span>
+          </div>
+        </div>
+
+        <div class="tile">
+          <div class="title-section">
+            <div class="tile-icon">
+              <img src="images/tile-icon.png" alt="" />
+            </div>
+            <div class="tile-title">
+              <span>Some title Words.</span>
+            </div>
+          </div>
+          <div class="tile-content">
+            <span>Some content Words.</span>
+          </div>
+        </div>
+
+        <div class="tile">
+          <div class="title-section">
+            <div class="tile-icon">
+              <img src="images/tile-icon.png" alt="" />
+            </div>
+            <div class="tile-title">
+              <span>Some title Words.</span>
             </div>
           </div>
         </div>
 
-        <!-- tire brands section -->
-        <div class="tire-brand-container">
-          <div class="content-container">
-            <h2>BEST BRANDS FOR THE BEST PRICES</h2>
-            <div class="images-container">
-              <div class="image-container">
-                <img src="images/tire-brand-1.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-2.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-3.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-4.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-5.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-6.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-7.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-8.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-9.png" alt="" />
-              </div>
-              <div class="image-container">
-                <img src="images/tire-brand-10.png" alt="" />
-              </div>
+        <div class="tile">
+          <div class="title-section">
+            <div class="tile-icon">
+              <img src="images/tile-icon.png" alt="" />
+            </div>
+            <div class="tile-title">
+              <span>Some title Words.</span>
             </div>
           </div>
         </div>
+      </div>
+    </div>
 
-        <!-- terms and conditions sections -->
-        <div class="terms-container">
-          <div class="terms-content-container">
-            <h2>TERMS AND CONDITIONS</h2>
-            <div class="terms-content">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                euismod, nisi vel consectetur egestas, nisi nisi consectetur
-                tortor, eget tincidunt nisl nisi velit eget nisl.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                euismod, nisi vel consectetur egestas, nisi nisi consectetur
-                tortor, eget tincidunt nisl nisi velit eget nisl.
-              </p>
-            </div>
-          </div>
+    <!-- auction policy -->
+    <div class="auction-policy-container">
+      <div class="auction-policy">
+        <div class="auction-policy-title">
+          <span>AUCTION POLICY</span>
         </div>
+        <div class="auction-policy-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
+            eget tincidunt nisl nisi velit eget nisl.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
+            eget tincidunt nisl nisi velit eget nisl.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
+            eget tincidunt nisl nisi velit eget nisl.
+          </p>
+        </div>
+      </div>
+    </div>
 
-        <!-- footer section -->
-        <div class="footer-container">
-          <div class="footer-content-container">
-            <div class="logo-footer">
-              <img src="logo" alt="" />
-            </div>
-            <nav>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
-            </nav>
+    <!-- tire brands section -->
+    <div class="tire-brand-container">
+      <div class="content-container">
+        <h2>BEST BRANDS FOR THE BEST PRICES</h2>
+        <div class="images-container">
+          <div class="image-container">
+            <img src="images/tire-brand-1.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-2.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-3.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-4.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-5.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-6.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-7.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-8.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-9.png" alt="" />
+          </div>
+          <div class="image-container">
+            <img src="images/tire-brand-10.png" alt="" />
           </div>
         </div>
+      </div>
+    </div>
+
+    <!-- terms and conditions sections -->
+    <div class="terms-container">
+      <div class="terms-content-container">
+        <h2>TERMS AND CONDITIONS</h2>
+        <div class="terms-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
+            eget tincidunt nisl nisi velit eget nisl.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
+            eget tincidunt nisl nisi velit eget nisl.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- footer section -->
+    <div class="footer-container">
+      <div class="footer-content-container">
+        <div class="logo-footer">
+          <img src="logo" alt="" />
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
+    <script>
+      function myFunction(imgs) {
+        var expandImg = document.getElementById("expandedImg");
+        expandImg.src = imgs.src;
+        expandImg.parentElement.style.display = "block";
+      }
+    </script>
   </body>
 </html>
