--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-      rel="stylesheet"
-    />
-    <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
@@ -133,10 +129,40 @@
     <div class="tiles-container">
       <div class="tiles">
         <!-- start of tiles -->
-        <div class="tile">
+        <div class="tile" id="red-colored">
           <div class="title-section">
             <div class="tile-icon">
-              <img src="images/tile-icon.png" alt="" />
+              <img src="./assets/images/Vector-car.png" alt="" />
+            </div>
+            <div class="tile-title">
+              <span>FAST AND FREE FEDEX SHIPPING.</span>
+            </div>
+          </div>
+          <div class="tile-content">
+            <span
+              >WE SHIP WHITHIN 1 BUSINESS DAY AFTER RECEIVING A PAYMENT.</span
+            >
+          </div>
+        </div>
+
+        <div class="tile alt-direction" id="black-colored">
+          <div class="title-section">
+            <div class="tile-icon">
+              <img src="./assets/images/Shield.png" alt="" />
+            </div>
+            <div class="tile-title">
+              <span>100 % WORKING TIRES FREE OF LEAKS AND/OR DAMAGES.</span>
+            </div>
+          </div>
+          <div class="tile-content">
+            WE <span>DO NOT</span> SELL TIRES WITH REPAIRS ON THE SIDEWALL
+          </div>
+        </div>
+
+        <div class="tile" id="black-colored">
+          <div class="title-section">
+            <div class="tile-icon">
+              <img src="./assets/images/Money.png" alt="" />
             </div>
             <div class="tile-title">
               <span>Some title Words.</span>
@@ -147,38 +173,10 @@
           </div>
         </div>
 
-        <div class="tile">
+        <div class="tile" id="red-colored">
           <div class="title-section">
             <div class="tile-icon">
-              <img src="images/tile-icon.png" alt="" />
-            </div>
-            <div class="tile-title">
-              <span>Some title Words.</span>
-            </div>
-          </div>
-          <div class="tile-content">
-            <span>Some content Words.</span>
-          </div>
-        </div>
-
-        <div class="tile">
-          <div class="title-section">
-            <div class="tile-icon">
-              <img src="images/tile-icon.png" alt="" />
-            </div>
-            <div class="tile-title">
-              <span>Some title Words.</span>
-            </div>
-          </div>
-          <div class="tile-content">
-            <span>Some content Words.</span>
-          </div>
-        </div>
-
-        <div class="tile">
-          <div class="title-section">
-            <div class="tile-icon">
-              <img src="images/tile-icon.png" alt="" />
+              <img src="./assets/images/check-all.png" alt="" />
             </div>
             <div class="tile-title">
               <span>Some title Words.</span>
@@ -186,10 +184,10 @@
           </div>
         </div>
 
-        <div class="tile">
+        <div class="tile" id="black-colored">
           <div class="title-section">
             <div class="tile-icon">
-              <img src="images/tile-icon.png" alt="" />
+              <img src="./assets/images/happy.png" alt="" />
             </div>
             <div class="tile-title">
               <span>Some title Words.</span>
