completed tiles section all working as explected

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
               <img src="./assets/images/Money.png" alt="" />
             </div>
             <div class="tile-title">
-              <span>Some title Words.</span>
+              <span>MONEY BACK GARANTEE.</span>
             </div>
           </div>
           <div class="tile-content">
-            <span>Some content Words.</span>
+            <span>IF YOU HAVE AN ISSUE WITH THE TIRE ON ARRIVAL, WE ACCEPT RETURNS, AS LONG AS, THE TIRE WAS NOT DRIVEN AFTER PURCHASE. </span>
           </div>
         </div>
 
@@ -179,18 +179,18 @@
               <img src="./assets/images/check-all.png" alt="" />
             </div>
             <div class="tile-title">
-              <span>Some title Words.</span>
+              <span>EACH TIRE IS DOUBLE CHECKED BEFORE SHIPMENT</span>
             </div>
           </div>
         </div>
 
         <div class="tile" id="black-colored">
-          <div class="title-section">
+          <div class="title-section" id="satisfaction-column">
             <div class="tile-icon">
               <img src="./assets/images/happy.png" alt="" />
             </div>
             <div class="tile-title">
-              <span>Some title Words.</span>
+              <span>SATISFACTION GARANTEED.</span>
             </div>
           </div>
         </div>
