auction policy styling completed

--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
             </div>
           </div>
           <div class="tile-content">
-            <span>IF YOU HAVE AN ISSUE WITH THE TIRE ON ARRIVAL, WE ACCEPT RETURNS, AS LONG AS, THE TIRE WAS NOT DRIVEN AFTER PURCHASE. </span>
+            <span
+              >IF YOU HAVE AN ISSUE WITH THE TIRE ON ARRIVAL, WE ACCEPT RETURNS,
+              AS LONG AS, THE TIRE WAS NOT DRIVEN AFTER PURCHASE.
+            </span>
           </div>
         </div>
 
@@ -205,19 +208,33 @@
         </div>
         <div class="auction-policy-content">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
-            eget tincidunt nisl nisi velit eget nisl.
+            100% working tires, free of leaks and damage. We inspect all tires
+            individually when receiving new inventory and before shipping. If we
+            find leaks/defects before shipping.
+          </p>
+          <p id="red-text">
+            Some tires may have been repaired in the tread area. We do not sell
+            tires with repairs in the sidewalls. All of our tires are inspected,
+            air tested, and professionally repaired/patched if required. We do
+            not sell tires with repairs in the sidewalls.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
-            eget tincidunt nisl nisi velit eget nisl.
+            We do guarantee all of our repairs/patches for as long as you own a
+            tire. Unfortunately, we can not indicate each individual tire repair
+            due to our inventory processing system limitations. If it is a
+            concern for you please contact us by phone or email before
+            purchasing and we will kindly check it for you.
+          </p>
+          <p id="red-text">
+            We cannot guarantee evenly worn tire tread as it may vary depending
+            on the previous driving experience, car suspension, and road
+            conditions.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
-            eget tincidunt nisl nisi velit eget nisl.
+            If you decide you no longer need/want a tire that you purchased, a
+            RESTOCKING fee of 20% will be applied, you will need to ship it back
+            at your expense before you can receive a refund. A refund WILL NOT
+            be issued if tire/s were driven since purchase.
           </p>
         </div>
       </div>
