styling and images added for tire brands section

--- a/index.html
+++ b/index.html
@@ -246,34 +246,19 @@
         <h2>BEST BRANDS FOR THE BEST PRICES</h2>
         <div class="images-container">
           <div class="image-container">
-            <img src="images/tire-brand-1.png" alt="" />
+            <img src="./assets/images/michelin.png" alt="" />
           </div>
           <div class="image-container">
-            <img src="images/tire-brand-2.png" alt="" />
+            <img src="./assets/images/continental.png" alt="" />
           </div>
           <div class="image-container">
-            <img src="images/tire-brand-3.png" alt="" />
+            <img src="./assets/images/b.png" alt="" />
           </div>
           <div class="image-container">
-            <img src="images/tire-brand-4.png" alt="" />
+            <img src="./assets/images/goodrich.png" alt="" />
           </div>
           <div class="image-container">
-            <img src="images/tire-brand-5.png" alt="" />
-          </div>
-          <div class="image-container">
-            <img src="images/tire-brand-6.png" alt="" />
-          </div>
-          <div class="image-container">
-            <img src="images/tire-brand-7.png" alt="" />
-          </div>
-          <div class="image-container">
-            <img src="images/tire-brand-8.png" alt="" />
-          </div>
-          <div class="image-container">
-            <img src="images/tire-brand-9.png" alt="" />
-          </div>
-          <div class="image-container">
-            <img src="images/tire-brand-10.png" alt="" />
+            <img src="./assets/images/uniroyal.png" alt="" />
           </div>
         </div>
       </div>
