terms and conditions section styling completed

--- a/index.html
+++ b/index.html
@@ -270,14 +270,15 @@
         <h2>TERMS AND CONDITIONS</h2>
         <div class="terms-content">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
-            eget tincidunt nisl nisi velit eget nisl.
+            Doctor Tires does not accept any liability or provides any warranty
+            for the NEW tires sold at this auction (with the exception of the
+            return/refund policy).
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-            euismod, nisi vel consectetur egestas, nisi nisi consectetur tortor,
-            eget tincidunt nisl nisi velit eget nisl.
+            All the tires sold are USED and have various treads. The treads have
+            been measured by the staff, and are accurate. Tires have all been
+            inspected for air damage. The tires sold are in AS IS condition and
+            are USED.
           </p>
         </div>
       </div>
