footer styling, images and links added finished working on initial desing

--- a/index.html
+++ b/index.html
@@ -288,14 +288,14 @@
     <div class="footer-container">
       <div class="footer-content-container">
         <div class="logo-footer">
-          <img src="logo" alt="" />
+          <img src="./assets/images/Doctor tires final 2.png" alt="" />
         </div>
         <nav>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a target="_blank" href="https://doctortires.com/">Home</a></li>
+            <li><a target="_blank" href="https://doctortires.com/services-2/">Services</a></li>
+            <li><a target="_blank" href="https://doctortires.com/portfolio/">Portfolio</a></li>
+            <li><a target="_blank" href="https://doctortires.com/contacts/">Contact</a></li>
           </ul>
         </nav>
       </div>
