tablet size header and main completed

--- a/index.html
+++ b/index.html
@@ -40,76 +40,78 @@
       <div class="product-name-container">
         <h1>NAME OF THE PRODUCT</h1>
       </div>
-      <!-- product image section TRY CODE-->
-      <div class="product-image-gallery">
-        <div class="container">
-          <!-- first image will go here -->
-          <img
-            src="./assets/images/Rectangle 13.png"
-            id="expandedImg"
-            style="width: 100%"
-          />
-        </div>
-        <!-- all images starting with the first will go here -->
-        <div class="images-row">
-          <div class="product-image">
+      <!-- product image section -->
+      <div class="product-images-summary">
+        <div class="product-image-gallery">
+          <div class="container">
+            <!-- first image will go here -->
             <img
               src="./assets/images/Rectangle 13.png"
-              alt="Snow"
+              id="expandedImg"
               style="width: 100%"
-              onclick="myFunction(this);"
             />
           </div>
-          <div class="product-image">
-            <img
-              src="./assets/images/Rectangle 12.png"
-              alt="Mountains"
-              style="width: 100%"
-              onclick="myFunction(this);"
-            />
-          </div>
-          <div class="product-image">
-            <img
-              src="./assets/images/Rectangle 13.png"
-              alt="Lights"
-              style="width: 100%"
-              onclick="myFunction(this);"
-            />
-          </div>
-          <div class="product-image">
-            <img
-              src="./assets/images/Rectangle 12.png"
-              alt="Mountains"
-              style="width: 100%"
-              onclick="myFunction(this);"
-            />
+          <!-- all images starting with the first will go here -->
+          <div class="images-row">
+            <div class="product-image">
+              <img
+                src="./assets/images/Rectangle 13.png"
+                alt="Snow"
+                style="width: 100%"
+                onclick="myFunction(this);"
+              />
+            </div>
+            <div class="product-image">
+              <img
+                src="./assets/images/Rectangle 12.png"
+                alt="Mountains"
+                style="width: 100%"
+                onclick="myFunction(this);"
+              />
+            </div>
+            <div class="product-image">
+              <img
+                src="./assets/images/Rectangle 13.png"
+                alt="Lights"
+                style="width: 100%"
+                onclick="myFunction(this);"
+              />
+            </div>
+            <div class="product-image">
+              <img
+                src="./assets/images/Rectangle 12.png"
+                alt="Mountains"
+                style="width: 100%"
+                onclick="myFunction(this);"
+              />
+            </div>
           </div>
         </div>
-      </div>
 
-      <!-- product bullet points section -->
-      <div class="product-bullet-points-container">
-        <div class="bullet-title">SUMMARY</div>
+        <!-- product bullet points section -->
+        <div class="product-bullet-points-container">
+          <div class="bullet-title">SUMMARY</div>
 
-        <div class="product-bullet-points">
-          <ul>
-            <li>
-              <img src="./assets/images/Vector.png" alt="icon" />
-              <span>Some Words.</span>
-            </li>
-            <li>
-              <img src="./assets/images/Vector.png" alt="icon" />
-              <span>Some Words.</span>
-            </li>
-            <li>
-              <img src="./assets/images/Vector.png" alt="icon" />
-              <span>Some Words.</span>
-            </li>
-            <li>
-              <img src="./assets/images/Vector.png" alt="icon" />
-              <span>Some Words.</span>
-            </li>
-          </ul>
+          <div class="product-bullet-points">
+            <ul>
+              <li>
+                <img src="./assets/images/Vector.png" alt="icon" />
+                <span>Some Words.</span>
+              </li>
+              <li>
+                <img src="./assets/images/Vector.png" alt="icon" />
+                <span>Some Words.</span>
+              </li>
+              <li>
+                <img src="./assets/images/Vector.png" alt="icon" />
+                <span>Some Words.</span>
+              </li>
+              <li>
+                <img src="./assets/images/Vector.png" alt="icon" />
+                <span>Some Words.</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -293,9 +295,21 @@
         <nav>
           <ul>
             <li><a target="_blank" href="https://doctortires.com/">Home</a></li>
-            <li><a target="_blank" href="https://doctortires.com/services-2/">Services</a></li>
-            <li><a target="_blank" href="https://doctortires.com/portfolio/">Portfolio</a></li>
-            <li><a target="_blank" href="https://doctortires.com/contacts/">Contact</a></li>
+            <li>
+              <a target="_blank" href="https://doctortires.com/services-2/"
+                >Services</a
+              >
+            </li>
+            <li>
+              <a target="_blank" href="https://doctortires.com/portfolio/"
+                >Portfolio</a
+              >
+            </li>
+            <li>
+              <a target="_blank" href="https://doctortires.com/contacts/"
+                >Contact</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
