tiles section, header and main 768px completed

--- a/index.html
+++ b/index.html
@@ -131,71 +131,75 @@
     <div class="tiles-container">
       <div class="tiles">
         <!-- start of tiles -->
-        <div class="tile" id="red-colored">
-          <div class="title-section">
-            <div class="tile-icon">
-              <img src="./assets/images/Vector-car.png" alt="" />
+        <div class="tiles-first-row">
+          <div class="tile" id="red-colored">
+            <div class="title-section">
+              <div class="tile-icon">
+                <img src="./assets/images/Vector-car.png" alt="" />
+              </div>
+              <div class="tile-title">
+                <span>FAST AND FREE FEDEX SHIPPING.</span>
+              </div>
             </div>
-            <div class="tile-title">
-              <span>FAST AND FREE FEDEX SHIPPING.</span>
+            <div class="tile-content">
+              <span
+                >WE SHIP WHITHIN 1 BUSINESS DAY AFTER RECEIVING A PAYMENT.</span
+              >
             </div>
           </div>
-          <div class="tile-content">
-            <span
-              >WE SHIP WHITHIN 1 BUSINESS DAY AFTER RECEIVING A PAYMENT.</span
-            >
-          </div>
-        </div>
 
-        <div class="tile alt-direction" id="black-colored">
-          <div class="title-section">
-            <div class="tile-icon">
-              <img src="./assets/images/Shield.png" alt="" />
+          <div class="tile alt-direction" id="black-colored">
+            <div class="title-section">
+              <div class="tile-icon">
+                <img src="./assets/images/Shield.png" alt="" />
+              </div>
+              <div class="tile-title">
+                <span>100 % WORKING TIRES FREE OF LEAKS AND/OR DAMAGES.</span>
+              </div>
             </div>
-            <div class="tile-title">
-              <span>100 % WORKING TIRES FREE OF LEAKS AND/OR DAMAGES.</span>
-            </div>
-          </div>
-          <div class="tile-content">
-            WE <span>DO NOT</span> SELL TIRES WITH REPAIRS ON THE SIDEWALL
-          </div>
-        </div>
-
-        <div class="tile" id="black-colored">
-          <div class="title-section">
-            <div class="tile-icon">
-              <img src="./assets/images/Money.png" alt="" />
-            </div>
-            <div class="tile-title">
-              <span>MONEY BACK GARANTEE.</span>
-            </div>
-          </div>
-          <div class="tile-content">
-            <span
-              >IF YOU HAVE AN ISSUE WITH THE TIRE ON ARRIVAL, WE ACCEPT RETURNS,
-              AS LONG AS, THE TIRE WAS NOT DRIVEN AFTER PURCHASE.
-            </span>
-          </div>
-        </div>
-
-        <div class="tile" id="red-colored">
-          <div class="title-section">
-            <div class="tile-icon">
-              <img src="./assets/images/check-all.png" alt="" />
-            </div>
-            <div class="tile-title">
-              <span>EACH TIRE IS DOUBLE CHECKED BEFORE SHIPMENT</span>
+            <div class="tile-content">
+              WE <span>DO NOT</span> SELL TIRES WITH REPAIRS ON THE SIDEWALL
             </div>
           </div>
         </div>
-
-        <div class="tile" id="black-colored">
-          <div class="title-section" id="satisfaction-column">
-            <div class="tile-icon">
-              <img src="./assets/images/happy.png" alt="" />
+        <div class="tiles-second-row">
+          <div class="tile big-tile" id="black-colored">
+            <div class="title-section">
+              <div class="tile-icon">
+                <img src="./assets/images/Money.png" alt="" />
+              </div>
+              <div class="tile-title">
+                <span>MONEY BACK GARANTEE.</span>
+              </div>
             </div>
-            <div class="tile-title">
-              <span>SATISFACTION GARANTEED.</span>
+            <div class="tile-content">
+              <span
+                >IF YOU HAVE AN ISSUE WITH THE TIRE ON ARRIVAL, WE ACCEPT
+                RETURNS, AS LONG AS, THE TIRE WAS NOT DRIVEN AFTER PURCHASE.
+              </span>
+            </div>
+          </div>
+          <div class="internal-column">
+            <div class="tile" id="red-colored">
+              <div class="title-section">
+                <div class="tile-icon">
+                  <img src="./assets/images/check-all.png" alt="" />
+                </div>
+                <div class="tile-title">
+                  <span>EACH TIRE IS DOUBLE CHECKED BEFORE SHIPMENT</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="tile happy-tile" id="black-colored">
+              <div class="title-section" id="satisfaction-column">
+                <div class="tile-icon">
+                  <img src="./assets/images/happy.png" alt="" />
+                </div>
+                <div class="tile-title">
+                  <span>SATISFACTION GARANTEED.</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
